--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,13 @@
 
     <!-- External CSS -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/nav.css"/>
-    <link rel="stylesheet" href="/styles/new-tweet.css"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700,700i" rel="stylesheet">
-
 
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/nav.css"/>
+    <link rel="stylesheet" href="/styles/new-tweet.css"/>
+    <link rel="stylesheet" href="/styles/all-tweets.css"/>
 
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
@@ -39,6 +39,22 @@
           <input type="submit" value="Tweet">
           <span class="counter">140</span>
         </form>
+      </section>
+      <section id="all-tweets">
+        <article>
+          <header>
+            <img src="images/bird.png" alt="User image">
+            <h3>USERNAME</h3>
+          </header>
+          <p>THIS IS THE FULL TWEEET HEREEEE</p>
+          <footer>
+            <p>timestamp</p>
+            <div class="icons">
+              <img src="images/flag.png" alt="flag">
+              <img src="images/retweet.png" alt="retweet">
+              <img src="images/like.png" alt="like">
+          </footer>
+        </article>
       </section>
     </main>
   </body>
