--- a/public/index.html
+++ b/public/index.html
@@ -40,22 +40,20 @@
           <span class="counter">140</span>
         </form>
       </section>
-      <section id="all-tweets">
-        <article>
+        <article class="all-tweets">
           <header>
             <img src="images/bird.png" alt="User image">
             <h3>USERNAME</h3>
+            <p>@handle</p>
           </header>
           <p>THIS IS THE FULL TWEEET HEREEEE</p>
           <footer>
-            <p>timestamp</p>
-            <div class="icons">
-              <img src="images/flag.png" alt="flag">
-              <img src="images/retweet.png" alt="retweet">
-              <img src="images/like.png" alt="like">
+            <p>10 days ago</p>
+            <img class="icons" src="images/flag.png" alt="flag">
+            <img class="icons" src="images/retweet.png" alt="retweet">
+            <img class="icons" src="images/like.png" alt="like">
           </footer>
         </article>
-      </section>
     </main>
   </body>
 </html>
