--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+    <script type="text/javascript" src="/scripts/hover.js"></script>
   </head>
 
   <body>
@@ -40,7 +41,7 @@
           <span class="counter">140</span>
         </form>
       </section>
-        <article class="all-tweets">
+        <article class="all-tweets" id="all-tweets-one">
           <header>
             <img src="images/bird.png" alt="User image">
             <h3>USERNAME</h3>
