--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,6 @@
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
-    <script type="text/javascript" src="/scripts/hover.js"></script>
   </head>
 
   <body>
@@ -41,20 +40,20 @@
           <span class="counter">140</span>
         </form>
       </section>
-        <article class="all-tweets" id="all-tweets-one">
-          <header>
-            <img src="images/bird.png" alt="User image">
-            <h3>USERNAME</h3>
-            <p>@handle</p>
-          </header>
-          <p>THIS IS THE FULL TWEEET HEREEEE</p>
-          <footer>
-            <p>10 days ago</p>
-            <img class="icons" src="images/flag.png" alt="flag">
-            <img class="icons" src="images/retweet.png" alt="retweet">
-            <img class="icons" src="images/like.png" alt="like">
-          </footer>
-        </article>
+      <article class="all-tweets" id="all-tweets">
+        <header>
+          <img src="images/bird.png" alt="User image">
+          <h3>USERNAME</h3>
+          <p>@handle</p>
+        </header>
+        <p>THIS IS THE FULL TWEEET HEREEEE</p>
+        <footer>
+          <p>10 days ago</p>
+          <img class="icons" src="images/flag.png" alt="flag">
+          <img class="icons" src="images/retweet.png" alt="retweet">
+          <img class="icons" src="images/like.png" alt="like">
+        </footer>
+      </article>
     </main>
   </body>
 </html>
