--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <main class="container">
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form action="/tweets" method="post">
+        <form id="create-new-tweet" action="/tweets" method="post">
           <textarea name="text" placeholder="What are you humming about?"></textarea>
           <input type="submit" value="Tweet">
           <span class="counter">140</span>
