New tweets load with AJAX request. New tweets are prepended and display at the top of the list

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,8 @@
           <span class="counter">140</span>
         </form>
       </section>
+      <section id="tweet-container">
+      </section>
     </main>
   </body>
 </html>
