--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
+      <div class="toggle-button">
+        <img src="/images/edit.png" alt="Compose a new tweet">
+        <p>Compose</p>
+      </div>
     </nav>
 
     <!-- Page-specific (main) content here -->
@@ -35,10 +39,11 @@
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
         <form id="create-new-tweet" action="/tweets" method="post">
-          <textarea name="text" placeholder="What are you humming about?"></textarea>
+          <textarea id="auto-focus-on-toggle" name="text" placeholder="What are you humming about?"></textarea>
           <input type="submit" value="Tweet">
           <span class="counter">140</span>
         </form>
+        <p class="error">Error message</p>
       </section>
       <section id="tweet-container">
       </section>
